# xode-blockchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  setup-xode-node.sh  xode-node-script.sh
.github/workflows/: release.yml  test-code.yml  xode-node-rpi-ubuntu.yml  xode-node-ubuntu.yml
automation/: xode-node-upload.sh
container-files/: container_file_aarch64  container_file_x86-64
node/genesis/: Cargo.toml
node/genesis/src/: chain_spec.rs  main.rs  service.rs
node/xode/: Cargo.toml
node/xode/src/: chain_spec.rs  command.rs  main.rs  rpc.rs
pallets/dex/: Cargo.toml
pallets/dex/src/: humidefi.rs  lib.rs  mock.rs  tests.rs
pallets/humidefi/: Cargo.toml
pallets/humidefi/src/: impls.rs  lib.rs  mock.rs  tests.rs
pallets/interface/: Cargo.toml
pallets/interface/src/: lib.rs
pallets/interfaces/: Cargo.toml
pallets/interfaces/src/: humidefi.rs  lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs
zombienet/: README.md  xode-para-config.toml  zombienet-launch.sh
